Added to nav bar

--- a/index.html
+++ b/index.html
@@ -11,9 +11,33 @@
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 
 </head>
-<body class="bg-amber-300 inter-font">
-    <h1 class="text-2xl border-4 mt-2 text1">Hello World</h1>
-    <h3 class="text">Bangladesh.</h3>
-    <button class="btn">pay</button>
+<body class="inter-font">
+    <header class="header">
+        <nav>
+            <div class="logo">
+                <h1><span class="text-white">Tech</span><span class="text-gradient">Wave</span></h1>
+            </div>
+            <div>
+              <ul class="menu">
+                <li><a href="">About</a></li>
+                <li><a href="">Episodes</a></li>
+                <li><a href="">Host</a></li>
+              </ul>                                   
+            </div>
+            <div>
+              <button class="subscribe-btn">
+              Subscribe <span>→</span>
+              </button>
+            </div>
+        </nav>
+    </header>
+
+
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
