--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <title>Assignment-02</title>
     <link rel="stylesheet" href="./styles.css">
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
@@ -29,9 +31,37 @@
               Subscribe <span>→</span>
               </button>
             </div>
+            
         </nav>
+         <!-- <span>
+            <i class="fa-solid fa-bars"></i>
+        </span> -->
+
+        <section class="container section">
+          <div class="banner-photo">
+              <div class="banner-pic">
+               <!-- <img src="./assets/hero-circle.png" alt=""> -->
+                <button class="banner-btn">new</button>
+                <img src="./assets/microphone.png" alt="">
+            </div>
+            <div class="banner-text">
+                <h1>TechWave</h1>
+                <p>Your daily dose of tech insights, productivity hacks, and personal growth</p>
+
+            </div>
+            <div class="parent-btn">
+                <button class="spotify-btn"><img src="./assets/spotify.png" alt="">Listen On Spotify</button>
+                <!-- <button class="subscribe1-btn">Subcribes</button> -->
+
+                <button class="subscribe1-btn">
+                <img src="./assets/message.png" alt="">Subscribe
+                </button>
+            </div>
+          </div>
+        </section>
     </header>
 
+    
 
     <main>
 
