--- a/index.html
+++ b/index.html
@@ -31,16 +31,11 @@
               Subscribe <span>→</span>
               </button>
             </div>
-            
         </nav>
-         <!-- <span>
-            <i class="fa-solid fa-bars"></i>
-        </span> -->
 
         <section class="container section">
           <div class="banner-photo">
               <div class="banner-pic">
-               <!-- <img src="./assets/hero-circle.png" alt=""> -->
                 <button class="banner-btn">new</button>
                 <img src="./assets/microphone.png" alt="">
             </div>
@@ -51,8 +46,6 @@
             </div>
             <div class="parent-btn">
                 <button class="spotify-btn"><img src="./assets/spotify.png" alt="">Listen On Spotify</button>
-                <!-- <button class="subscribe1-btn">Subcribes</button> -->
-
                 <button class="subscribe1-btn">
                 <img src="./assets/message.png" alt="">Subscribe
                 </button>
@@ -64,6 +57,42 @@
     
 
     <main>
+        <section class="container-1">
+            <div class="about-content">
+                <h1>About the Podcast</h1>
+                <p>TechWave is your go-to podcast for staying ahead in the fast-paced world of technology.<br>
+                  We break down complex topics into digestible insights, explore productivity strategies that actually work,<br>
+                   and share stories of personal growth from industry leaders.
+                    <br><br>
+                 Join thousands of young professionals and tech enthusiasts who start their day with TechWave</p>
+            </div>
+            <div>
+                <hr class="line">
+            </div>
+            <div class="about-card">
+                <div class="card-1">
+                    <h1>150K+</h1>
+                    <p>Monthly Listeners</p>
+                </div>
+                <div class="card-1">
+                    <h1>200+</h1>
+                    <p>Episodes Published</p>
+
+
+                </div>
+                <div class="card-1">
+                    <h1>4.9★</h1>
+                    <p>Average Rating</p>
+
+                </div>
+                <div class="card-1">
+                    <h1>50+</h1>
+                    <p>Industry Experts</p>
+
+                </div>
+            </div>
+
+        </section>
 
     </main>
     <footer>
