--- a/index.html
+++ b/index.html
@@ -88,11 +88,42 @@
                 <div class="card-1">
                     <h1>50+</h1>
                     <p>Industry Experts</p>
-
                 </div>
             </div>
-
         </section>
+
+        <section class="container-2">
+            <h1>Why Choose TechWave</h1>
+            <div class="grid-container">
+                <div class="box-1">
+                    <img src="./assets/headphone.png" alt="">
+                     <h5>Premium Audio Quality</h5>
+                    <p>Experience crystal-clear sound with professional-grade recording equipment and expert audio engineering. Every episode is mastered for optimal listening across all devices and platforms.</p>
+                </div>
+                <div class="box-2">
+                    <img src="./assets/device.png" alt="">
+                    <h5>Mobile Friendly</h5>
+                    <p>Listen on the go with seamless mobile experience and offline downloads.</p>
+                </div>
+                <div class="box-3">
+                    <img src="./assets/location.png" alt="">
+                    <h5>Global Community</h5>
+                    <p>Connect with tech enthusiasts from over 120 countries worldwide.</p>
+                </div>
+                <div class="box-4">
+                    <img src="./assets/location.png" alt="">
+                    <h5>Exclusive Interviews</h5>
+                    <p>Get unprecedented access to industry titans, startup founders, and tech visionaries. Our host secures exclusive conversations you won't find anywhere else, diving deep into their journeys, failures, and success strategies.</p>
+                </div>
+                <div class="box-5">
+                    <img src="./assets/resource.png" alt="">
+                    <h5>Rich Resources</h5>
+                    <p>Access show notes, transcripts, and additional learning materials for every episode.</p>
+                </div>
+            </div>
+        </section>
+
+        <section></section>
 
     </main>
     <footer>
