Added to Footer section

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="header">
         <nav>
             <div class="logo">
-                <h1><span class="text-white">Tech</span><span class="text-gradient">Wave</span></h1>
+                <h1><span class="text-white-1">Tech</span><span class="text-gradient-1">Wave</span></h1>
             </div>
             <div>
               <ul class="menu">
@@ -123,10 +123,39 @@
             </div>
         </section>
 
-        <section></section>
+        <section class="container-3">
+
+        </section>
 
     </main>
     <footer>
+        <section class="container-4">
+           <div class="text-container">
+             <div>
+                <h1><span class="text-white-1">Tech</span><span class="text-gradient-1">Wave</span></h1>
+            </div>
+            <div class="footer-card">
+                <div class="footer-card-1">
+                    <img src="./assets/spotify.png" alt="">
+                    <p>Spotify</p>
+                </div>
+                <div class="footer-card-2">
+                    <img src="./assets/apple-podcast.png" alt="">
+                    <p>Apple Podcasts</p>
+                </div>
+                <div class="footer-card-3">
+                    <img src="./assets/youtube-podcast.png" alt="">
+                    <p>YouTube</p>
+                </div>
+                <div class="footer-card-4">
+                    <img src="./assets/twitter.png" alt="">
+                    <p>Twitter</p>
+                </div>
+            </div>
+            <br><p>&copy 2026 TechWave Podcast. All rights reserved.</p>
+
+           </div>
+        </section>
 
     </footer>
 </body>
