--- a/index.html
+++ b/index.html
@@ -54,8 +54,6 @@
         </section>
     </header>
 
-    
-
     <main>
         <section class="container-1">
             <div class="about-content">
@@ -124,6 +122,81 @@
         </section>
 
         <section class="container-3">
+            <div class="feature">
+                <h3>Featured Episodes</h3>
+                <div class="feature-card">
+                    <div class="feature-card-1">
+                        <div class="c-1">
+                            <iframe width="380" height="214" src="https://www.youtube.com/embed/OdOu8yGpIig?si=oY8thDB0G_rAgP9Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen class="c-1"></iframe>
+
+                        </div>
+                        <div class="c-text-1">
+                            <h3>The Future of AI in Everyday Life</h3>
+                            <p>Exploring how artificial intelligence is transforming our daily routines and what to expect in the next decade.</p>
+                            <div class="clock">
+                                <img src="./assets/clock.png" alt="">
+                                <p>42 min</p>
+                            </div>
+
+                        </div>
+
+
+                    </div>
+                    <div class="feature-card-1">
+                        <div class="c-1">
+                            <iframe width="380" height="214" src="https://www.youtube.com/embed/OdOu8yGpIig?si=oY8thDB0G_rAgP9Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen class="c-1"></iframe>>
+
+                        </div>
+                        <div class="c-text-1">
+                            <h3>Building Better Habits for Remote Work</h3>
+                            <p>Practical strategies for staying productive and maintaining work-life balance in a remote environment.</p>
+                            <div class="clock">
+                                <img src="./assets/clock.png" alt="">
+                                <p>35 min</p>
+                            </div>
+
+                        </div>
+
+                    </div>
+                    <div class="feature-card-1">
+                        <div class="c-1">
+                            <iframe width="380" height="214" src="https://www.youtube.com/embed/OdOu8yGpIig?si=oY8thDB0G_rAgP9Q" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen class="c-1"></iframe>
+
+                        </div>
+                        <div class="c-text-1">
+                            <h3>Career Growth in Tech: A Roadmap</h3>
+                            <p>Expert advice on navigating your tech career from junior developer to senior leadership roles.</p>
+                            <div class="clock">
+                                <img src="./assets/clock.png" alt="">
+                                <p>51 min</p>
+                            </div>
+
+                        </div>
+
+                    </div>
+                    
+                </div>
+
+            </div>
+            <div class="feature-text">
+                <div class="alex">
+                    <div class="picture">
+                        <img src="./assets/host.png" alt="">
+                    </div>
+                    <div class="text">
+                        <h3>Alex Kumar</h3>
+                        <p>Tech entrepreneur, productivity expert, and lifelong learner. Alex has been in the tech industry for over 10 years, working with startups and Fortune 500 companies. Through TechWave, Alex shares insights from industry leaders and practical advice for anyone looking to grow in tech.</p>
+                       <div class="icon">
+                        <img src="./assets/linkedin.png" alt="">
+                        <img src="./assets/x.png" alt="">
+                        <img src="./assets/instagram.png" alt="">
+                        <img src="./assets/youtube.png" alt="">
+                       </div>
+                    </div>
+
+                </div>
+
+            </div>
 
         </section>
 
