Added to responsive styles up to 576 px

--- a/index.html
+++ b/index.html
@@ -31,9 +31,15 @@
               Subscribe <span>→</span>
               </button>
             </div>
+
+            <div class="hamburg-sign">
+                <span></span>
+                 <span></span>
+               <span></span>
+              </div>
         </nav>
 
-        <section class="container section">
+        <section class="container section ">
           <div class="banner-photo">
               <div class="banner-pic">
                 <button class="banner-btn">new</button>
@@ -54,8 +60,8 @@
         </section>
     </header>
 
-    <main>
-        <section class="container-1">
+    <main >
+        <section class="container-1 ">
             <div class="about-content">
                 <h1>About the Podcast</h1>
                 <p>TechWave is your go-to podcast for staying ahead in the fast-paced world of technology.<br>
@@ -90,7 +96,7 @@
             </div>
         </section>
 
-        <section class="container-2">
+        <section class="container-2 ">
             <h1>Why Choose TechWave</h1>
             <div class="grid-container">
                 <div class="box-1">
@@ -179,6 +185,7 @@
 
             </div>
             <div class="feature-text">
+                <p>Meet the Host</p>
                 <div class="alex">
                     <div class="picture">
                         <img src="./assets/host.png" alt="">
@@ -201,7 +208,7 @@
         </section>
 
     </main>
-    <footer>
+    <footer >
         <section class="container-4">
            <div class="text-container">
              <div>
